* [Changed] VersionInfo into record * [Renamed] removed get-prefix for getter in BoundedContext because it is exposed as part of the public API